fixed parallax on mobile

--- a/src/less/overlay.less
+++ b/src/less/overlay.less
@@ -6,4 +6,18 @@
     width: 100%;
     height: 100%;
     background: white;
+    
+    p {
+        position: absolute;
+        display: block;
+        text-align: center;
+        top: 45%;
+        color: @black;
+        font-size: 64px;
+        width: 100%;
+        font-family: "Alegreya Sans", sans-serif;
+        text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+        font-weight: 900;
+        display: none;
+    }
 }
