--- a/src/less/parallax.less
+++ b/src/less/parallax.less
@@ -27,3 +27,6 @@
 
 }
 
+.mobile .parallax > div {
+    position: absolute;
+}
