--- a/src/less/style.less
+++ b/src/less/style.less
@@ -119,28 +119,34 @@ section#contact {
     margin-top: 15px;
     color: @black;   
     .big {
+        margin-top: 30px;
         text-align: center;
         font-size: 24px;
         font-weight: 900;
-        letter-spacing: -0.04em;   
+        letter-spacing: -0.04em;  
+        margin-bottom: 0;
     }
     
     .social{
         
         text-align: center;
-        font-size: 80px;
+        font-size: 100px;
             
         
         a {
+            padding: 10px;
             display: inline-block;
             line-height: 1em;
             border-radius: 4px;
             color: #4e8172;
             margin: 10px;
+            transform: scale(0.8);
+            transition: all 0.2s ease-in-out;
+            opacity: 0.5;
             
             &:hover {
-                background-color: #4e8172;
-                color: @white;
+                opacity: 1;
+                transform: scale(1);
             }
         }
     }   
